--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@ body {
   transition: opacity 0.2s ease;
 }
 
+
 .eliminar-post-btn:hover {
   opacity: 1;
 }
@@ -78,6 +79,20 @@ body {
 .eliminar-post-btn svg {
   width: 20px;
   height: 20px;
+}
+
+.add-comment{
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 5px;
+  color: #1C274C;
+  opacity: 0.7;
+  transition: opacity 0.2s ease;
+}
+
+.add-comment:hover{
+  opacity: 1;
 }
 
 .comments-section {
