--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ body {
   height: 20px;
 }
 
-.add-comment{
+#add-comment{
   background: none;
   border: none;
   cursor: pointer;
@@ -91,8 +91,13 @@ body {
   transition: opacity 0.2s ease;
 }
 
-.add-comment:hover{
+#add-comment:hover{
   opacity: 1;
+}
+
+.formulario-comentario{
+  position: fixed;
+  z-index: 1000;
 }
 
 .comments-section {
